port over a bunch more shadowverse cards